--- a/_includes/comments-providers/gitalk.html
+++ b/_includes/comments-providers/gitalk.html
@@ -29,6 +29,7 @@
 				clientSecret: '{{ site.comments.gitalk.clientSecret }}',
 				repo: '{{ site.comments.gitalk.repository }}',
 				owner: '{{ site.comments.gitalk.owner }}',
+				proxy: '{{ site.comments.gitalk.proxy }}',
 				admin: [{{ _admin }}],
 				// id: '{{ page.key }}'
 				id: (location.pathname).split("/").pop().substring(0, 49)
